# OpenCVTutorial2

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/yangyang1/opencvtutorial2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mixed_sample.cpp  native-lib.cpp
app/src/main/java/com/example/yangyang1/opencvtutorial2/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/yangyang1/opencvtutorial2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
